Added the ability to send Text Messages
Added ability to send sms messages as well as updating the views when
done so.